grid/container spacing fixes

--- a/app/css/app.css
+++ b/app/css/app.css
@@ -507,13 +507,15 @@ code {
 [am-Row] {
   max-width: 60rem;
   margin: 0 auto;
-  padding: 0 1rem;
   display: -webkit-flex;
   display: -ms-flexbox;
   display: flex;
   -webkit-flex-wrap: wrap;
   -ms-flex-wrap: wrap;
   flex-wrap: wrap; }
+  @media only screen and (min-width: 40.063em) {
+    [am-Row] {
+      padding: 0 1rem; } }
 
 [am-Row~='full'] {
   max-width: 100%; }
@@ -792,7 +794,7 @@ a {
   padding: 1rem 1rem 2rem; }
   @media only screen and (min-width: 40.063em) {
     [am-SiteHeader] {
-      padding: 2rem 1rem 3rem; } }
+      padding: 2rem 2rem 3rem; } }
   @media only screen and (min-width: 40.063em) {
     [am-SiteHeader] p {
       font-size: 1.414rem;
@@ -1043,6 +1045,9 @@ a[am-Strip~='alt']:hover {
   max-width: 60rem;
   margin: 0 auto;
   padding: 0 1rem; }
+  @media only screen and (min-width: 40.063em) {
+    [am-ContentContainer] {
+      padding: 0 2rem; } }
   [am-ContentContainer] p, [am-ContentContainer] ul, [am-ContentContainer] ol, [am-ContentContainer] h2, [am-ContentContainer] h3, [am-ContentContainer] h4, [am-ContentContainer] h5, [am-ContentContainer] h6 {
     max-width: 40rem; }
 
@@ -1159,5 +1164,13 @@ a[am-Strip~='alt']:hover {
   [am-FeatureList-Link] a {
     display: inline-block;
     margin-left: 1rem; }
+
+[am-Slither] {
+  padding: 1.5rem 0;
+  background: white; }
+  [am-Slither] h1, [am-Slither] h2, [am-Slither] h3, [am-Slither] h4, [am-Slither] h5, [am-Slither] h6 {
+    margin: 0; }
+  [am-Slither] ul {
+    margin: 0; }
 
 /*# sourceMappingURL=app.css.map */
