--- a/app/scss/modules/_SiteHeader.scss
+++ b/app/scss/modules/_SiteHeader.scss
@@ -5,7 +5,7 @@
 	//text-align: center;
 
 	@media #{$medium-up} {
-		padding: 2rem 1rem 3rem;
+		padding: 2rem 2rem 3rem;
 	}
 
 	p {
